--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
     <!-- styles -->
-    <link rel="stylesheet" href="./style/style.scss" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -20,7 +20,13 @@
         <div class="nav-center">
           <!-- Nav header -->
           <div class="nav-header">
-            <img src="./assets/logo.svg" alt="Logo" class="logo" />
+            <h2 class="logo">HorlerTech</h2>
+            <!-- <img
+              src="./assets/logo.svg"
+              loading="lazy"
+              alt="Logo"
+              class="logo"
+            /> -->
             <button class="nav-toggle">
               <i class="fas fa-bars"></i>
             </button>
@@ -81,7 +87,7 @@
     <!-- Footer -->
     <footer class="section">
       <p>
-        copyright &copy; backroad travels company
+        copyright &copy; HorlerTech
         <span id="date"></span>. all right reserved
       </p>
     </footer>
@@ -91,6 +97,6 @@
       <i class="fas fa-arrow-up"></i>
     </a>
     <!-- javascript -->
-    <script src="./js/index.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
