Adding the profile image

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
         <div class="nav-center">
           <!-- Nav header -->
           <div class="nav-header">
-            <h2 class="logo">HorlerTech</h2>
             <!-- <img
               src="./assets/logo.svg"
               loading="lazy"
               alt="Logo"
               class="logo"
             /> -->
+            <h2 class="logo">horlerTech</h2>
+
             <button class="nav-toggle">
               <i class="fas fa-bars"></i>
             </button>
@@ -41,6 +42,9 @@
                 <a href="#about" class="scroll-link">about</a>
               </li>
               <li>
+                <a href="#skills" class="scroll-link">skills</a>
+              </li>
+              <li>
                 <a href="#services" class="scroll-link">services</a>
               </li>
               <li>
@@ -52,9 +56,13 @@
       </nav>
 
       <!-- Banner -->
+      <div class="profile">
+        <img src="./assets/recentPic.jpg" alt="Profile Image" />
+        <p class="profile-text">Software Developer</p>
+      </div>
       <div class="banner">
         <div class="container">
-          <h1>Scroll Project</h1>
+          <h1>Project Tours</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
             eos expedita in dolorem vero accusantium rerum illo repellendus ad
@@ -69,6 +77,12 @@
     <section id="about" class="section">
       <div class="title">
         <h2>About <span>Us</span></h2>
+      </div>
+    </section>
+    <!-- About -->
+    <section id="skills" class="section">
+      <div class="title">
+        <h2>Skills<span>Set</span></h2>
       </div>
     </section>
     <!-- Services -->
