Mobile positioning of profile

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 
       <!-- Banner -->
       <div class="profile">
-        <img src="./assets/recentPic.jpg" alt="Profile Image" />
+        <a href="https://github.com/horler408">
+          <img src="./assets/recentPic.jpg" alt="Profile Image" />
+        </a>
         <p class="profile-text">Software Developer</p>
       </div>
       <div class="banner">
@@ -82,7 +84,7 @@
     <!-- About -->
     <section id="skills" class="section">
       <div class="title">
-        <h2>Skills<span>Set</span></h2>
+        <h2>Skills<span> Set</span></h2>
       </div>
     </section>
     <!-- Services -->
