--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <!-- google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- styles -->
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <!-- Header -->
+    <!-- Header section -->
     <header id="home">
       <!-- Navbar -->
       <nav id="nav">
@@ -21,7 +26,7 @@
           <!-- Nav header -->
           <div class="nav-header">
             <!-- <img
-              src="./assets/logo.svg"
+              src="./assets/logo.png"
               loading="lazy"
               alt="Logo"
               class="logo"
@@ -54,13 +59,17 @@
           </div>
         </div>
       </nav>
+      <!-- end of navbar -->
 
       <!-- Banner -->
       <div class="profile">
         <a href="https://github.com/horler408">
           <img src="./assets/recentPic.jpg" alt="Profile Image" />
         </a>
-        <p class="profile-text">Software Developer</p>
+        <div class="profile-text">
+          <h1 class="title-1">abdulazeez olaitan</h1>
+          <p class="title-2">Software Developer</p>
+        </div>
       </div>
       <div class="banner">
         <div class="container">
@@ -74,17 +83,32 @@
         </div>
       </div>
     </header>
+    <!-- end of header section -->
 
     <!-- About -->
     <section id="about" class="section">
       <div class="title">
-        <h2>About <span>Us</span></h2>
+        <h2>About <span>Me</span></h2>
+        <div class="about">
+          <p>
+            Hi, My name is Abdulazeez Olaitan, a Software Developer based in Ibadan, Nigeria. 
+            I studied Electrical and computer engineering at the federal university of technology 
+            Minna, Nigeria.</p> 
+            <p>I'm a passionate software developer and technology enthusiast who finds satisfaction
+            in the  use technology to tackle real life problems. </p>
+            <p>I leverage on modern technological tools such as HTML 5, CSS 3, Javascript, React, 
+            NodeJs, MongoDb, and sql database to develop dynamic website of international 
+            standard with 100% accessibility for the physically challenged users. </p>
+            <p>I have more than two years experience in the development industry and I work on
+            both frontend and backend side of a website.</p>
+          </p>
+        </div>
       </div>
     </section>
     <!-- About -->
     <section id="skills" class="section">
       <div class="title">
-        <h2>Skills<span> Set</span></h2>
+        <h2>Skill<span> Set</span></h2>
       </div>
     </section>
     <!-- Services -->
@@ -102,6 +126,39 @@
 
     <!-- Footer -->
     <footer class="section">
+      <!-- social media -->
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.facebook.com/nloengr">
+            <i class="fab fa-facebook"></i>
+            <!-- <img src="./assets/facebook.png" alt="" /> -->
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com/">
+            <i class="fab fa-twitter"></i>
+            <!-- <img src="./assets//twitter.png" alt="" /> -->
+          </a>
+        </li>
+        <li>
+          <a href="https://codepen.io.com/">
+            <i class="fab fa-codepen"></i>
+            <!-- <img src="./assets//instagram.png" alt="" /> -->
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/">
+            <i class="fab fa-linkedin"></i>
+            <!-- <img src="./assets//linked.png" alt="" /> -->
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-sketch"></i>
+            <!-- <img src="./assets/twitter.png" alt="" /> -->
+          </a>
+        </li>
+      </ul>
       <p>
         copyright &copy; HorlerTech
         <span id="date"></span>. all right reserved
