Removing skill set

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               alt="Logo"
               class="logo"
             /> -->
-            <h2 class="logo">horlerTech</h2>
+            <h2 class="logo"><strong>horlerTech</strong></h2>
 
             <button class="nav-toggle">
               <i class="fas fa-bars"></i>
@@ -45,9 +45,6 @@
               </li>
               <li>
                 <a href="#about" class="scroll-link">about</a>
-              </li>
-              <li>
-                <a href="#skills" class="scroll-link">skills</a>
               </li>
               <li>
                 <a href="#services" class="scroll-link">services</a>
@@ -99,18 +96,13 @@
             <p>I leverage on modern technological tools such as HTML 5, CSS 3, Javascript, React, 
             NodeJs, MongoDb, and sql database to develop dynamic website of international 
             standard with 100% accessibility for the physically challenged users. </p>
-            <p>I have more than two years experience in the development industry and I work on
+            <p>I have more than two years' experience in this creative industry and I work on
             both frontend and backend side of a website.</p>
           </p>
         </div>
       </div>
     </section>
-    <!-- About -->
-    <section id="skills" class="section">
-      <div class="title">
-        <h2>Skill<span> Set</span></h2>
-      </div>
-    </section>
+    
     <!-- Services -->
     <section id="services" class="section">
       <div class="title">
@@ -153,8 +145,8 @@
           </a>
         </li>
         <li>
-          <a href="https://www.twitter.com">
-            <i class="fab fa-sketch"></i>
+          <a href="https://www.instagram.com">
+            <i class="fab fa-instagram"></i>
             <!-- <img src="./assets/twitter.png" alt="" /> -->
           </a>
         </li>
