--- a/index.html
+++ b/index.html
@@ -112,7 +112,36 @@
     <!-- Tours -->
     <section id="tours" class="section">
       <div class="title">
-        <h2>Featured <span>Tours</span></h2>
+        <h2>project <span>Tours</span></h2>
+        <!-- Slider starts -->
+        <div class="carousel">
+          <div class="slide">
+            <a href="#"><img src="" alt="Project 1" class="slide-img"></a>
+            <h1>1</h1>
+          </div>
+          <div class="slide">
+            <a href="#"><img src="" alt="Project 2" class="slide-img"></a>
+            <h1>2</h1>
+          </div>
+          <div class="slide">
+            <a href="#"><img src="" alt="Project 3" class="slide-img"></a>
+            <h1>3</h1>
+          </div>
+          <div class="slide">
+            <a href="#"><img src="" alt="Project 4" class="slide-img"></a>
+            <h1>4</h1>
+          </div>
+          <div class="slide">
+            <a href="#"><img src="" alt="Project 5" class="slide-img"></a>
+            <h1>5</h1>
+          </div>
+        </div>
+        <!-- Slider ends -->
+        <!-- Buttons -->
+        <div class="btn-container">
+          <button type="button" class="prev-btn">prev</button>
+          <button type="button" class="next-btn">next</button>
+        </div>
       </div>
     </section>
 
