Adding the preloader

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <!-- SpinKit -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/spinkit/2.0.1/spinkit.min.css"
+    />
     <!-- google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
@@ -120,7 +125,7 @@
             <h1 class="description">A country details site</h1>
           </div>
           <div class="slide">
-            <a href="https://horler408.github.io/ip_tracker"><img src="./assets/ip_address_tracker.jpg" alt="Project 2" class="slide-img"></a>
+            <a href="https://horler408.github.io/ip_tracker/"><img src="./assets/ip_address_tracker.jpg" alt="Project 2" class="slide-img"></a>
             <h1 class="description">A project to track an ip address</h1>
           </div>
           <div class="slide">
@@ -189,7 +194,23 @@
         <span id="date"></span>. all right reserved
       </p>
     </footer>
-
+    <!-- Preloader -->
+    <div class="preloader">
+      <div class="sk-circle">
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+        <div class="sk-circle-dot"></div>
+      </div>
+    </div>
     <!-- back to top button -->
     <a href="#home" class="scroll-link top-link">
       <i class="fas fa-arrow-up"></i>
