Styling the Skills section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="#about" class="scroll-link">about</a>
               </li>
               <li>
-                <a href="#services" class="scroll-link">services</a>
+                <a href="#skills" class="scroll-link">skills</a>
               </li>
               <li>
                 <a href="#projects" class="scroll-link">projects</a>
@@ -81,7 +81,7 @@
             eos expedita in dolorem vero accusantium rerum illo repellendus ad
             non!
           </p>
-          <a href="#tours" class="scroll-link btn btn-white"> Explore Projects </a>
+          <a href="#projects" class="scroll-link btn btn-white"> Explore Projects </a>
         </div>
       </div>
     </header>
@@ -93,7 +93,7 @@
         <h2>About <span>Me</span></h2>
         <div class="about">
           <p>
-            Hi, My name is Abdulazeez Olaitan, a Software Developer based in Ibadan, Nigeria. 
+            Hi, My name is Yusuf Abdulazeez Olaitan, a Software Developer based in Ibadan, Nigeria. 
             I studied Electrical and computer engineering at the federal university of technology 
             Minna, Nigeria.</p> 
             <p>I'm a passionate software developer and technology enthusiast who finds satisfaction
@@ -108,10 +108,73 @@
       </div>
     </section>
     
-    <!-- Services -->
-    <section id="services" class="section">
+    <!-- Skills -->
+    <section id="skills" class="section">
       <div class="title">
-        <h2>Our <span>Services</span></h2>
+        <h2>skill <span>Sets</span></h2>
+        <p class="intro">These services are available onsite and online (remote).
+          We also offer both freelancing and full-time services.
+        </p>
+        <div class="skill__cards">
+          <div class="card-items">
+            <h3>front end</h3>
+            <ul>
+              <li class="list">HTML 5</li>
+              <li class="list">CSS 3</li>
+              <li class="list">Bootstrap</li>
+              <li class="list">Sass</li>
+              <li class="list">Javascript</li>
+              <li class="list">React</li>
+            </ul>
+          </div>
+          <div class="card-items">
+            <h3>back end</h3>
+            <ul>
+              <li class="list">NodeJs</li>
+              <li class="list">Python</li>
+              <li class="list">PHP</li>
+              <li class="list">ExpressJs</li>
+              <li class="list">Java</li>
+            </ul>
+          </div>
+          <div class="card-items">
+            <h3>Database Administration</h3>
+            <ul>
+              <li class="list">My sql</li>
+              <li class="list">Ms sql</li>
+              <li class="list">Sqlite</li>
+              <li class="list">MongoDb</li>
+              <li class="list">PostgreDb</li>
+            </ul>
+          </div>
+          <div class="card-items">
+            <h3>Microsoft Offices</h3>
+            <ul>
+              <li class="list">Basic Word Design</li>
+              <li class="list">Advanced Excel</li>
+              <li class="list">Powerpoint Presentation</li>
+              <li class="list">Sass</li>
+            </ul>
+          </div>
+          <div class="card-items">
+            <h3>Computer Appreciation</h3>
+            <ul>
+              <li class="list">Basic Computer Operation</li>
+              <li class="list">Basic CLI Commands</li>
+              <li class="list">Networking</li>
+              <li class="list">Photoshop Design</li>
+            </ul>
+          </div>
+          <div class="card-items">
+            <h3>Designs</h3>
+            <ul>
+              <li class="list">Autocad 2D Design</li>
+              <li class="list">Autocad 3D Design</li>
+              <li class="list">Photoshop</li>
+              <li class="list">Figma Design</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Tours -->
@@ -129,7 +192,7 @@
             <h1 class="description">A project to track an ip address</h1>
           </div>
           <div class="slide">
-            <a href="#"><img src="./assets/url_shortner.jpg" alt="Project 3" class="slide-img"></a>
+            <a href="https://horler408.github.io/url_shortener"><img src="./assets/url_shortner.jpg" alt="Project 3" class="slide-img"></a>
             <h1 class="description">A URL shortener project</h1>
           </div>
           <div class="slide">
@@ -144,8 +207,10 @@
         <!-- Slider ends -->
         <!-- Buttons -->
         <div class="btn-container">
-          <button type="button" class="prev-btn">prev</button>
-          <button type="button" class="next-btn">next</button>
+          <i class="fas fa-right-angle prev-btn"></i>
+          <i class="fas fa-left-angle next-btn"></i>
+          <!-- <button type="button" class="prev-btn">prev</button>
+          <button type="button" class="next-btn">next</button> -->
         </div>
       </div>
     </section>
@@ -186,7 +251,7 @@
         </li>
       </ul>
       <div class="contact">
-        <p class="email">horler.web@gmail.com</p>
+        <p class="email"><a href="mailto:horler.web@gmail.com">horler.web@gmail.com</a></p>
         <p class="phone">08061236744</p>
       </div>
       <p>
