Adding navigation arrows

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
         <!-- Slider ends -->
         <!-- Buttons -->
         <div class="btn-container">
-          <i class="fas fa-right-angle prev-btn"></i>
-          <i class="fas fa-left-angle next-btn"></i>
+          <i class="fas fa-arrow-left prev-btn"></i>
+          <i class="fas fa-arrow-right next-btn"></i>
           <!-- <button type="button" class="prev-btn">prev</button>
           <button type="button" class="next-btn">next</button> -->
         </div>
@@ -252,7 +252,7 @@
       </ul>
       <div class="contact">
         <p class="email"><a href="mailto:horler.web@gmail.com">horler.web@gmail.com</a></p>
-        <p class="phone">08061236744</p>
+        <p class="phone">+2348061236744</p>
       </div>
       <p>
         copyright &copy; HorlerTech
