adding z-index to profile img

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div class="nav-center">
           <!-- Nav header -->
           <div class="nav-header">
-            <!-- <img
+            <img
               src="./assets/logo.png"
               loading="lazy"
               alt="Logo"
               class="logo"
-            /> -->
-            <h2 class="logo"><strong>horlerTech</strong></h2>
+            />
+            <!-- <h2 class="logo"><strong>horlerTech</strong></h2> -->
 
             <button class="nav-toggle">
               <i class="fas fa-bars"></i>
@@ -192,15 +192,19 @@
             <h1 class="description">A project to track an ip address</h1>
           </div>
           <div class="slide">
-            <a href="https://horler408.github.io/url_shortener"><img src="./assets/url_shortner.jpg" alt="Project 3" class="slide-img"></a>
+            <a href="https://horler408.github.io/job_listings"><img src="./assets/job_listing.png" alt="Project 3" class="slide-img"></a>
+            <h1 class="description">A Job Listing Site</h1>
+          </div>
+          <div class="slide">
+            <a href="https://horler408.github.io/url_shortener"><img src="./assets/url_shortner.jpg" alt="Project 4" class="slide-img"></a>
             <h1 class="description">A URL shortener project</h1>
           </div>
           <div class="slide">
-            <a href="https://horler408.github.io/social_media_dashboard"><img src="./assets/social_media_dashboard.jpg" alt="Project 4" class="slide-img"></a>
+            <a href="https://horler408.github.io/social_media_dashboard"><img src="./assets/social_media_dashboard.jpg" alt="Project 5" class="slide-img"></a>
             <h1 class="description">Social Media Dashbaord Static Site</h1>
           </div>
           <div class="slide">
-            <a href="https://horler408.github.io/react_git_site"><img src="./assets/react_cv_project.png" alt="Project 5" class="slide-img"></a>
+            <a href="https://horler408.github.io/react_git_site"><img src="./assets/react_cv_project.png" alt="Project 6" class="slide-img"></a>
             <h1 class="description">A simple CV template project</h1>
           </div>
         </div>
