--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
         <div class="container">
           <h1>Project Tours</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
-            eos expedita in dolorem vero accusantium rerum illo repellendus ad
-            non!
+            Take a tour of few of my real world projects.
           </p>
           <a href="#projects" class="scroll-link btn btn-white"> Explore Projects </a>
         </div>
