--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <div class="nav-center">
           <!-- Nav header -->
           <div class="nav-header">
-            <img
-              src="./assets/logo.png"
+            <!-- <img
+              src=""
               loading="lazy"
               alt="Logo"
               class="logo"
-            />
+            /> -->
             <!-- <h2 class="logo"><strong>horlerTech</strong></h2> -->
 
             <button class="nav-toggle">
@@ -66,7 +66,7 @@
       <!-- Banner -->
       <div class="profile">
         <a href="https://github.com/horler408">
-          <img src="./assets/recentPic.jpg" alt="Profile Image" />
+          <img src="./assets/profile_pic.png" alt="Profile Image" />
         </a>
         <div class="profile-text">
           <h1 class="title-1">abdulazeez olaitan</h1>
