checking for blending background

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <div class="nav-center">
           <!-- Nav header -->
           <div class="nav-header">
-            <!-- <img
-              src=""
+            <img
+              src="./assets/logo.png"
               loading="lazy"
               alt="Logo"
               class="logo"
-            /> -->
+            />
             <!-- <h2 class="logo"><strong>horlerTech</strong></h2> -->
 
             <button class="nav-toggle">
