--- a/index.html
+++ b/index.html
@@ -92,15 +92,14 @@
         <div class="about">
           <p>
             Hi, My name is Yusuf Abdulazeez Olaitan, a Software Developer based in Ibadan, Nigeria. 
-            I studied Electrical and computer engineering at the federal university of technology 
-            Minna, Nigeria.</p> 
-            <p>I'm a passionate software developer and technology enthusiast who finds satisfaction
+            I have engineering degree in in electrical and computer from a federal university in Nigeria.</p> 
+            <p>I'm a passionate developer and technology enthusiast who finds satisfaction
             in the  use technology to tackle real life problems. </p>
             <p>I leverage on modern technological tools such as HTML 5, CSS 3, Javascript, React, 
             NodeJs, MongoDb, and sql database to develop dynamic website of international 
-            standard with 100% accessibility for the physically challenged users. </p>
-            <p>I have more than two years' experience in this creative industry and I work on
-            both frontend and backend side of a website.</p>
+            standard with 100% accessibility to the users. </p>
+            <p>I have more than two years experience in this creative industry and I work on
+            both frontend and backend development of a website.</p>
           </p>
         </div>
       </div>
