correcting the about section paragraph

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div class="about">
           <p>
             Hi, My name is Yusuf Abdulazeez Olaitan, a Software Developer based in Ibadan, Nigeria. 
-            I have engineering degree in in electrical and computer from a federal university in Nigeria.</p> 
+            I have engineering degree in electrical and computer from a federal university of technology 
+            in Nigeria.</p> 
             <p>I'm a passionate developer and technology enthusiast who finds satisfaction
             in the  use technology to tackle real life problems. </p>
             <p>I leverage on modern technological tools such as HTML 5, CSS 3, Javascript, React, 
