--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HorlerTech Portfolio</title>
+    <meta name="description" content="HorlerTech (Yusuf Abdulazeez Olaitan) Personal Portfolio site">
+    <title>HorlerTech | Personal Portfolio</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
