removing some cards

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
               <li class="list">HTML 5</li>
               <li class="list">CSS 3</li>
               <li class="list">Bootstrap</li>
+              <li class="list">Figma</li>
               <li class="list">Sass</li>
               <li class="list">Javascript</li>
               <li class="list">React</li>
@@ -134,44 +135,19 @@
               <li class="list">Python</li>
               <li class="list">PHP</li>
               <li class="list">ExpressJs</li>
+              <li class="list">Version Control</li>
+              <li class="list">Basic CLI commands</li>
               <li class="list">Java</li>
             </ul>
           </div>
           <div class="card-items">
             <h3>Database Administration</h3>
             <ul>
-              <li class="list">My sql</li>
-              <li class="list">Ms sql</li>
+              <li class="list">My Sql</li>
+              <li class="list">Sql Server</li>
               <li class="list">Sqlite</li>
               <li class="list">MongoDb</li>
               <li class="list">PostgreDb</li>
-            </ul>
-          </div>
-          <div class="card-items">
-            <h3>Microsoft Offices</h3>
-            <ul>
-              <li class="list">Basic Word Design</li>
-              <li class="list">Advanced Excel</li>
-              <li class="list">Powerpoint Presentation</li>
-              <li class="list">Sass</li>
-            </ul>
-          </div>
-          <div class="card-items">
-            <h3>Computer Appreciation</h3>
-            <ul>
-              <li class="list">Basic Computer Operation</li>
-              <li class="list">Basic CLI Commands</li>
-              <li class="list">Networking</li>
-              <li class="list">Photoshop Design</li>
-            </ul>
-          </div>
-          <div class="card-items">
-            <h3>Designs</h3>
-            <ul>
-              <li class="list">Autocad 2D Design</li>
-              <li class="list">Autocad 3D Design</li>
-              <li class="list">Photoshop</li>
-              <li class="list">Figma Design</li>
             </ul>
           </div>
       </div>
