--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h1 class="description">Social Media Dashbaord Static Site</h1>
           </div>
           <div class="slide">
-            <a href="https://horler408.github.io/react_git_site"><img src="./assets/react_cv_project.png" alt="Project 6" class="slide-img"></a>
+            <a href="https://horler408.github.io/react_cv_template"><img src="./assets/react_cv_project.png" alt="Project 6" class="slide-img"></a>
             <h1 class="description">A simple CV template project</h1>
           </div>
         </div>
