adjusting tour message

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
           <h1>Project Tours</h1>
           <p>
-            Take a tour of few of my real world projects.
+            Take a tour of some of my problem solving projects.
           </p>
           <a href="#projects" class="scroll-link btn btn-white"> Explore Projects </a>
         </div>
@@ -203,7 +203,7 @@
             <h1 class="description">Social Media Dashbaord Static Site</h1>
           </div>
           <div class="slide">
-            <a href="https://horler408.github.io/react_git_site"><img src="./assets/react_cv_project.png" alt="Project 6" class="slide-img"></a>
+            <a href="https://horler408.github.io/react_cv_template"><img src="./assets/react_cv_project.png" alt="Project 6" class="slide-img"></a>
             <h1 class="description">A simple CV template project</h1>
           </div>
         </div>
@@ -212,8 +212,6 @@
         <div class="btn-container">
           <i class="fas fa-arrow-left prev-btn"></i>
           <i class="fas fa-arrow-right next-btn"></i>
-          <!-- <button type="button" class="prev-btn">prev</button>
-          <button type="button" class="next-btn">next</button> -->
         </div>
       </div>
     </section>
