--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 <a href="#home" class="scroll-link">home</a>
               </li>
               <li>
+                <a href="#services" class="scroll-link">services</a>
+              </li>
+              <li>
                 <a href="#about" class="scroll-link">about</a>
               </li>
               <li>
-                <a href="#skills" class="scroll-link">skills</a>
-              </li>
-              <li>
-                <a href="#projects" class="scroll-link">projects</a>
+                <a href="#contacts" class="scroll-link">contacts</a>
               </li>
             </ul>
           </div>
@@ -78,7 +78,7 @@
         <div class="container">
           <h1>Project Tours</h1>
           <p>
-            Take a tour of few of my real world projects.
+            Take a tour of some of my problem solving projects.
           </p>
           <a href="#projects" class="scroll-link btn btn-white"> Explore Projects </a>
         </div>
