adding transparent logo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- Banner -->
       <div class="profile">
         <a href="https://github.com/horler408">
-          <img src="./assets/recentPic.jpg" alt="Profile Image" />
+          <img src="./assets/pix.png" alt="Profile Image" />
         </a>
         <div class="profile-text">
           <h1 class="title-1">abdulazeez olaitan</h1>
