--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="HorlerTech (Yusuf Abdulazeez Olaitan) Personal Portfolio site">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/logo.png">
     <title>HorlerTech | Personal Portfolio</title>
     <!-- font-awesome -->
     <link
